[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ordinal-list"
version = "0.2.0"
description = "A Python library that uses ordinal numbers to work with lists."
authors = [
    { name = "Jimmy Jensen" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["ordinal", "list", "indexing", "python", "0-based", "1-based"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/mrjsj/ordinal-list"

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
